modules/gatekeeper/manifests/constraint-block-host-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: block-host-namespace
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
%{~ for ns in excluded_namespaces ~}
      - ${ns}
%{~ endfor ~}
