modules/gatekeeper/manifests/constraint-block-privileged-containers.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: block-privileged-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
%{~ for ns in excluded_namespaces ~}
      - ${ns}
%{~ endfor ~}
