modules/gatekeeper/manifests/constraint-container-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
%{~ for ns in excluded_namespaces ~}
      - ${ns}
%{~ endfor ~}
