modules/gatekeeper/manifests/k8spsphostnamespace.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostnamespace

        violation[{"msg": msg, "details": {}}] {
          input.review.object.spec.hostNetwork
          msg := "Pod is using hostNetwork"
        }

        violation[{"msg": msg, "details": {}}] {
          input.review.object.spec.hostPID
          msg := "Pod is using hostPID"
        }

        violation[{"msg": msg, "details": {}}] {
          input.review.object.spec.hostIPC
          msg := "Pod is using hostIPC"
        }
